# scripts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
repo_stats/: CONTRIBUTING.md  Makefile  README.md  debug_runner.py  pyproject.toml  requirements-dev.txt  tox.ini
repo_stats/src/repo_stats/: __init__.py  utils.py
repo_stats/tests/: test_utils.py
