[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_stats"
version = "0.0.0"
description = "Small utilities to collect repository statistics"
authors = [ { name = "Julia Vural", email = "julia.vural@percona.com" } ]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["repo", "stats"]
